# image-editor

./: .gitignore  CMakeLists.txt  conanfile.py  srcfiles.cmake
scripts/: make.sh  run.sh
src/: main.cpp
src/model/: ImageModel.cpp  ImageModel.h
src/presenter/: Presenter.cpp  Presenter.h
src/view/: IImageView.h  ImageView.cpp  ImageView.h
ui/: MainWindowImage.ui
